+finished authication +front end fix up, only one button either logout or login/signup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,14 +14,11 @@
     <div class="container">
         <div class="row">
             <div class="col-5">
-              header left
             </div>
             <div class="col-5">
-                <button type="button" id = "logoutButton" class="btn btn-light"> Logout</button>
             </div>
             <div class="col-2">
-                
-                <button type="button" id = "loginButton" class="btn btn-light"> Login or Sign Up</button>
+                <button type="button" id = "loginoutButton" class="btn btn-light"><%= loginoutInnerHTMl%></button>
             </div>
         </div>
         <div class="row">
