--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,8 @@
                     <div class="container text-center">
                      <div class="row justify-content-center">
                         <div class="col-md-7">
-                        <h1 class="font-weight-light mt-4 text-white">YorPage</h1>
+                        <!--h1 class="font-weight-light mt-4 text-white">YorPage</!--h1-->
+                        <h1 class="font-weight-light mt-4 text-white"><%=title %></h1>
                         <p class="lead text-white-50">Everything you need to get into the Flow</p>
                         </div>
                     </div>
