--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/login.css">
-    <title>Document</title>
+    <link rel="shortcut icon" type = "image/ico" href="/images/favicon.ico">
+    <title>Sign In</title>
 </head>
 <body>
     <div class="container">
+      <div class="row top-buffer-80">
+      </div>
       <div class="row">
         <div class="col">
             <div id="page-content">
                 <div class="container text-center">
                  <div class="row justify-content-center">
                     <div class="col-md-7">
-                    <h1 class="font-weight-light mt-4 text-white">YorPage</h1>
+                    <h1><a class="font-weight-light mt-4 text-white" style="text-decoration: none" href="/">YorPage</a></h1>
                     <p class="lead text-white-50">Focus is the highest form of Meditation, Let's Start.</p>
                     </div>
                 </div>
